preview images are stretched; bug 497051, p=milos
git-svn-id: http://svn.mozilla.org/addons/trunk@29963 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main-mozilla.css
+++ b/site/app/webroot/css/amo2009/main-mozilla.css
@@ -2118,7 +2118,7 @@ html[xmlns] .clearfix {
     overflow: hidden;
 }
 .browse_thumbs ul.thumbs li.thumb div.thumb_item .img img {
-    height: 135px;
+    max-height: 135px;
 }
 .browse_thumbs .search-form {
     margin-bottom: 0;
